create exclude fields end point
